@@ -1,12 +1,0 @@
-HOSTS:
-  centos-7-x64:
-    roles:
-      - master
-    platform: el-7-x86_64
-    box: puppetlabs/centos-7.0-64-nocm
-    box_url: https://vagrantcloud.com/puppetlabs/boxes/centos-7.0-64-nocm
-    hypervisor: vagrant
-CONFIG:
-  log_level: verbose
-  type: foss
-  vagrant_memsize: 256
