@@ -1,20 +1,18 @@
 HOSTS:
-  centos7:
+  el7:
     roles:
       - default
       - server
     platform: el-7-x86_64
-    box: puppetlabs/centos-7.0-64-nocm
-    box_url: https://vagrantcloud.com/puppetlabs/boxes/centos-7.0-64-nocm
+    box: centos/7
     hypervisor: vagrant
-  centos66:
+  el6:
     roles:
       - server
     platform: el-6-x86_64
-    box: puppetlabs/centos-6.6-64-nocm
-    box_url: https://vagrantcloud.com/puppetlabs/boxes/centos-6.6-64-nocm
+    box: centos/6
     hypervisor: vagrant
 CONFIG:
   log_level: verbose
-  type: foss
+  type: aio
   vagrant_memsize: 256
